# ibuddy

./: .gitignore  README.md  ibuddy_ws.py  pyproject.toml
examples/: .gitignore  SETUP_temp_monitor.md  SETUP_twitch_alert.md  SETUP_youtube_sub_alert.md  disco_party.py  heartbeat_monitor.py  notifier.py  quickstart.py  streamers.txt  synchronized.py  temp_monitor.py  twitch_alert.py  youtube_sub_alert.py
ibuddy/: __init__.py  device.py  exceptions.py
vencord-plugin/: index.tsx  native.ts
