[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibuddy"
version = "1.0.1"
description = "Control the MSN i-Buddy USB figure from Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["ibuddy", "i-buddy", "usb", "hid", "hardware"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pywinusb>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/djcheesusreal/ibuddy"
Repository = "https://github.com/djcheesusreal/ibuddy"
Issues = "https://github.com/djcheesusreal/ibuddy/issues"

[project.optional-dependencies]
discord = ["websockets>=12.0"]

[tool.setuptools.packages.find]
include = ["ibuddy*"]
